--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="keywords" content="工作流,工作流程,OA工作流,workflow-engine,beeflow工作流" />
+    <meta name="description" content="workflow工作流。基于vue3开发的轻量级流程设计器。支持自定义表单、复杂流程设计等OA审批功能" />
     <link rel="icon" href="/favicon.ico">
     <meta base="<%= path %>" />
     <title><%= title %></title>
